fixed white space issues (nav bar & footer)

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -2,32 +2,29 @@
 
 #footer {
 //footer: social icon bar
-    position: relative;
     text-align: center;
-    bottom: 0;
     width: 100%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
     background-color: $dark-maple;
 
     .social-icons {
         list-style-type: none;
         padding: 0;
-        }
-
-    li {
-        display: inline;
     }
 
-    a {
-        padding: 10px;
-        transition: all 0.3s ease;
-        color: $light;
-
-        &:hover {
-            background-color: $orange-yellow;
-            color: $dark-brown;
+    ul {
+        margin: 0;
+        li {
+            display: inline;
+            a {
+                padding: 10px;
+                transition: all 0.3s ease;
+                color: $light;
+        
+                &:hover {
+                    background-color: $orange-yellow;
+                    color: $dark-brown;
+                }
+            }
         }
     }
     
